# tclg.py

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
tclg/: collections.py  contextlib.py  functools.py  io.py  operator.py  pathlib.py  typing.py
