[tool.poetry]
name = "tclg"
version = "0.1.0"
description = "Utilities, helpers, sugar, etc. for Travis C. LaGrone."
authors = ["Travis C. LaGrone"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
