[tool.poetry]
name = "tclg"
version = "0.1.0"
description = "Utilities, helpers, sugar, etc. for Travis C. LaGrone."
authors = [
    "Travis C. LaGrone <22419287+travis-c-lagrone@users.noreply.github.com>",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.10.1"

[build-system]
requires      = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
